package decorator_pattern.design_problem;

/**
 * DarkRoast
 */
public class DarkRoast extends Beverage {

    protected double cost() {
        return 0;
    }

    
}