package decorator_pattern.design_problem;

/**
 * Decaf
 */
public class Decaf extends Beverage {

    protected double cost() {
        return 0;
    }

    
}