package decorator_pattern.design_problem;

/**
 * Espresso
 */
public class Espresso extends Beverage {

    protected double cost() {
        return 0;
    }

    
}