package decorator_pattern.design_problem;

/**
 * HouseBlend
 */
public class HouseBlend extends Beverage {

    protected double cost() {
        return 0;
    }
}